# KiFlux

./: .gitignore  LICENSE  README.es.md  README.md  README.pt-BR.md  generate_kit_zips.py  pyproject.toml
src/kiflux/: __init__.py  bom_exporter.py  config.py  heuristics.py  jlc_api.py  kits.py  lib_manager.py  main.py
